feat: rent management setup

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
               <a class="nav-item nav-link" href="{% url 'dashboard' %}">Dashboard</a>
               <a class="nav-item nav-link" href="{% url 'customer' %}">Customer</a>
               <a class="nav-item nav-link" href="{% url 'all-shops' %}">Shop</a>
-              <a class="nav-item nav-link" href="{% url 'list-shop-rents' %}">Allocation</a>
+              <a class="nav-item nav-link" href="{% url 'create-shop-rent' %}">Allocation</a>
               
             </div>
             <div class="navbar-nav">
