--- a/templates/shop/detail.html
+++ b/templates/shop/detail.html
@@ -75,11 +75,11 @@
               <th scope="col">Handle</th> -->
             </tr>
             <tr>
-              <th scope="row">Shop Size</th>
-              <td>{{ shop.size }}</td>
-              <!-- <td>Otto</td>
-              <td>@mdo</td> -->
-          </tr>
+    <th scope="row">Shop Size (per m<sup>2</sup>)</th>
+    <td>{{ shop.size }}</td>
+    <!-- <td>Otto</td>
+    <td>@mdo</td> -->
+</tr>
           <tr>
               <th scope="row">Shop Type</th>
               <td>{{ shop.type }}</td>
