--- a/templates/shop/myshop.html
+++ b/templates/shop/myshop.html
@@ -32,11 +32,11 @@
                         <tr>
                             <td>Shop No</td>
                             <td>Shop Type</td>
-                            <td>Shop Price</td>
-                            <td>Shop Size</td>
+                            <td>Shop Price (₦)</td>
+                            <td>Shop Size(per m<sup>2</sup>)</td>
                             <td>Approval Status</td>
                             <!-- <td>Details</td> -->
-                            <td>Generate Advice |Old|New</td>
+                            <td>Generate Advice</td>
                             <td>Action</td>
                             
                             <!-- <td>Shop Rent</td> -->
@@ -78,7 +78,7 @@
                            </td> -->
                         <td>
                             <a href="{% url 'generate-shop-paymrnt-advice' shop.no %}" class="btn btn-outline-success btn-sm">
-                            View Advice (New)
+                            View Advice
                             </a>
                            </td>
 
