fix: resolved rent reminder signals

--- a/templates/shop/new_shop_form.html
+++ b/templates/shop/new_shop_form.html
@@ -35,6 +35,10 @@
                             {{form.size|as_crispy_field}}
                                 </div>
                             </div>
+                             <div class="col">
+                            {{form.address|as_crispy_field}}
+                                </div>
+                            </div>
                         </br>
                         <div class="row">
                             <button  type="submit" class="btn btn-success">Submit</button>
