--- a/templates/shop/new_shop_email.html
+++ b/templates/shop/new_shop_email.html
@@ -10,19 +10,19 @@
 
     <div style="background-color: #f5f5f5; padding: 20px;">
         <!-- <h2 style="color: #333;">Rent Payment Reminder</h2> -->
-        <p style="color: #666;">Dear Mr Ibrahim Nasir,</p>
-        <p style="color: #666;">I hope this message finds you well.</p>
-        <p style="color: #666;">I am pleased to inform you that we have successfully created a new shop for
+        <p>Dear Mr Ibrahim Nasir,</p>
+        <p>I hope this message finds you well.</p>
+        <p>I am pleased to inform you that we have successfully created a new shop for
 Nina Sky Innovation Limited. This new addition is a significant step forward and
 reflects our commitment to expanding our reach and enhancing our offerings.</p>
-        <p style="color: #666;">Details of the New Shop:</p>
-        <p style="color: #666;">Shop number: {{ shop.no }}</p>
-        <p style="color: #666;">Shop Type: {{ shop.type }}</p>
-        <p style="color: #666;">Shop size: {{ shop.size }}</p>
-        <p style="color: #666;">Shop address: {{ shop.address }}</p>
-<p style="color: #666;">Thank you for your continued support and leadership.</p>
-<p style="color: #666;">Best regards,</p>
-<p style="color: #666;">Nina Sky Innovations Limited</p>
+        <p>Details of the New Shop:</p>
+        <p>Shop number: {{ shop.no }}</p>
+        <p>Shop Type: {{ shop.type }}</p>
+        <p>Shop size: {{ shop.size }}</p>
+        <p>Shop address: {{ shop.address }}</p>
+<p>Thank you for your continued support and leadership.</p>
+<p>Best regards,</p>
+<p>Nina Sky Innovations Limited</p>
     </div>
 
 </body>
