--- a/templates/customer/customer.html
+++ b/templates/customer/customer.html
@@ -59,7 +59,7 @@
                             <tr>
     
                             <td>{{customer.no}}</td>
-                            <td>{{customer.name}}</td>
+                            <td>{{ customer.title}} {{customer.name|title}}</td>
                             <td>{{customer.business}}</td>
                             <td>{{customer.date}}</td>
                             <td>{{customer.email}}</td>
