--- a/templates/rent/rent_allocation_email.html
+++ b/templates/rent/rent_allocation_email.html
@@ -10,7 +10,7 @@
 
     <div style="background-color: #f5f5f5; padding: 20px;">
         <!-- <h2 style="color: #333;">Rent Payment Reminder</h2> -->
-        <p>Dear {{ customer.title }} {{ customer.name }},</p>
+        <p>Dear {{ customer.title }} {{ customer.name|title }},</p>
         <p>I hope this message finds you well.</p>
         <p>We are delighted to inform you that your payment for the shop has been
 successfully received and processed. As a result, we have allocated the following
@@ -23,8 +23,7 @@ shop to you:</p>
         <p>Allocation Date: {{ rent.rent_start }}</p>
 <p>Your new shop is now officially assigned to you, and you can start utilizing it
 immediately. Should you have any questions or require further assistance, please feel free to
-contact our support team at [Support Email] or call us at [Support Phone
-Number]. We are here to help you with any queries or additional support you may
+contact our support team at Ninaskyinnovations@gmail.com or call us at 08094422990. We are here to help you with any queries or additional support you may
 need.<p>
 <p>Thank you for your prompt payment and for choosing us. We are excited to see
 you make the most of your new shop and look forward to supporting your
