--- a/templates/customer/customer_admin_update_customer_form.html
+++ b/templates/customer/customer_admin_update_customer_form.html
@@ -77,7 +77,7 @@
 
     <div class="row">
         <div class="col-md-3">
-            <img src="{% static 'images/customer.jpg' %}" class="card-img-top mx-auto"  alt="Happy Customers">
+            <img src="https://prosper-django-bucket.s3.us-east-2.amazonaws.com/customer.JPG" class="card-img-top mx-auto"  alt="Happy Customers">
         </div>
         <div class="col-md-9">
             <div class="card mx-auto">
