--- a/templates/customer/customer_form.html
+++ b/templates/customer/customer_form.html
@@ -86,7 +86,7 @@
 
 <div class="container">
     <div class="row">
-        <h3>Edit Customer Information Page</h3>
+        <h3>Customer Information Page</h3>
     </div>
 
     <br>
@@ -94,7 +94,7 @@
 
     <div class="row">
         <div class="col-md-2">
-            <img src="{% static 'images/customer.jpg' %}" class="card-img-top mx-auto"  alt="Happy Customers">
+            <img src="https://prosper-django-bucket.s3.us-east-2.amazonaws.com/customer.JPG" class="card-img-top mx-auto"  alt="Happy Customers">
         </div>
         <div class="col-md-10">
             <div class="card mx-auto">
