--- a/templates/shop/new_shop_email.html
+++ b/templates/shop/new_shop_email.html
@@ -10,10 +10,10 @@
 
     <div style="background-color: #f5f5f5; padding: 20px;">
         <!-- <h2 style="color: #333;">Rent Payment Reminder</h2> -->
-        <p>Dear Mr Ibrahim Nasir,</p>
+        <p>Dear Admin,</p>
         <p>I hope this message finds you well.</p>
         <p>I am pleased to inform you that we have successfully created a new shop for
-Nina Sky Innovation Limited. This new addition is a significant step forward and
+Nina Sky Innovation Limited. Kindly login to the dashboard to approve the shop. This new addition is a significant step forward and
 reflects our commitment to expanding our reach and enhancing our offerings.</p>
         <p>Details of the New Shop:</p>
         <p>Shop number: {{ shop.no }}</p>
