--- a/templates/shop/shop_pdf.html
+++ b/templates/shop/shop_pdf.html
@@ -38,7 +38,7 @@
             <td>@mdo</td> -->
           </tr>
           <tr>
-            <th scope="row">5% VAT</th>
+            <th scope="row">5% WHT</th>
             <td>{{ shop.wht}}</td>
             <!-- <td>Otto</td>
             <td>@mdo</td> -->
